<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.atomos</groupId>
		<artifactId>atomos</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>atomos.framework</artifactId>
	<name>atomos.framework</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.eclipse.platform</groupId>
			<artifactId>org.eclipse.osgi</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.annotation</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<id>default-compile</id>
						<configuration>
							<!-- compile everything with the default to ensure module-info is correctg -->
							<release>${java.version}</release>
						</configuration>
					</execution>
					<execution>
						<id>java8-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<!-- compile the packages that must work with java 8 -->
							<excludes>
								<exclude>module-info.java</exclude>
								<exclude>org/atomos/framework/modules/*.java</exclude>
							</excludes>
							<release>8</release>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- Build an executable JAR -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.atomos.framework.AtomosRuntime</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<!--  work around until maven-jar-plugin supports main-class attribute for module-info.class -->
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<target>
								<exec executable="${java.home}/bin/jar" failonerror="true">
									<arg value="--main-class" />
									<arg value="org.atomos.framework.AtomosRuntime" />
									<arg value="--module-version" />
									<arg value="0.0.1" />
									<arg value="--update" />
									<arg value="--file" />
									<arg
										value="${project.build.directory}/${project.artifactId}-${project.version}.jar" />
								</exec>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
